# website

./: COMMIT_MESSAGE.txt  LICENSE
jstanek/: docker-compose.yml  haproxy.cfg  package-lock.json  pyproject.toml
jstanek/be/: Dockerfile  main.py  pyproject.toml
jstanek/be/jstanek-backend/: __init__.py
jstanek/be/jstanek-backend/tools/: base64_tool.py  passsword_generator.py
jstanek/be/jstanek-eu-backend/: main.py
jstanek/be/jstanek-eu-backend/tools/: base64_tool.py  hash_tool.py  mongodb_tool.py  passsword_generator.py
jstanek/be/jstanek_backend/: __init__.py  connectionmanager.py  main.py  root.py  websockets.py
jstanek/be/jstanek_backend/tools/: __init__.py  base64_tool.py  hash_tool.py  mongodb_tool.py  passsword_generator.py  qrcode_tool.py  test_base64_tool.py  test_hash_tool.py  test_mongodb_tool.py  test_password_generator.py  test_qrcode_tool.py
jstanek/be/tools/: __init__.py  base64_tool.py  hash_tool.py  mongodb_tool.py  passsword_generator.py
jstanek/fe/: .env.example  .gitignore  .prettierrc  Dockerfile  components.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
jstanek/fe/src/: app.css  app.html  hooks.server.ts
jstanek/jstanek_backend/: .coveragerc  MANIFEST.in  README.txt  development.ini  production.ini  pytest.ini  setup.py
jstanek/jstanek_backend/jstanek_backend/: tests.py
jstanek/jstanek_frontend/: .coveragerc  MANIFEST.in  README.txt  development.ini  production.ini  pytest.ini  setup.py
jstanek/jstanek_frontend/fe_old/: .coveragerc  README.txt  (+5 more)
(+89 files in other folders)
