[tool.poetry]
name = "jstanek-backend"
version = "1.0.0"
description = ""
authors = ["Jaroslav Staněk <jaroslav-stanek@pm.me>"]
readme = "README.md"
packages = [{include = "jstanek_backend"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.101.0"
black = "^23.7.0"
uvicorn = "^0.28.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
