[tool.poetry]
name = "jstanek-backend"
version = "1.0.0"
description = ""
authors = ["Jaroslav Staněk <jaroslav-stanek@pm.me>"]
readme = "README.md"
packages = [{include = "jstanek_backend"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.111.0"
uvicorn = {extras = ["standard"], version = "0.30.1"}
qrcode = "7.4.2"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
