[tool.poetry]
name = "jstanek-backend"
version = "1.0.0"
description = ""
authors = ["Jaroslav Staněk <jaroslav-stanek@pm.me>"]
readme = "README.md"
packages = [{include = "jstanek_backend"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.139.0"
uvicorn = {extras = ["standard"], version = "^0.1.1"}
qrcode = "^8.2"

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
pylint = "^4.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
